docket - don't construct file URLs through URI - the space/%20 transformation hampers save ops